--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kindle-localizer",
-  "module": "index.ts",
+  "module": "src/index.ts",
   "type": "module",
   "devDependencies": {
     "@types/bun": "latest"
